--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <body>
     <div class="page1">
       <nav>
+        <div class="menu ri-menu-line"></div>
         <div class="logo">
           <h1>UI/UX</h1>
           <span>Designer</span>
